# Finagent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: download_samples.py
src/: graph.py  state.py
src/agents/: competitor_analyst.py  document_parser.py  financial_analyst.py  report_writer.py  risk_assessor.py  router.py
src/prompts/: analyst.py  report.py  risk.py
src/rag/: embeddings.py  retriever.py  vectorstore.py
src/utils/: groq_client.py  pdf_parser.py  yfinance_validator.py
tests/: test_agents.py  test_graph.py
tests/eval/: run_eval.py  test_cases.json
